@@ -31,33 +31,33 @@ static struct {
 	const char *title;
 	const char *description;
 } table[] = {
-	{MNOTE_PENTAX_TAG_MODE, "Mode", N_("Capture Mode"), ""},
-	{MNOTE_PENTAX_TAG_QUALITY, "Quality", N_("Quality Level"), ""},
-	{MNOTE_PENTAX_TAG_FOCUS, "Focus", N_("Focus Mode"), ""},
-	{MNOTE_PENTAX_TAG_FLASH, "Flash", N_("Flash Mode"), ""},
-	{MNOTE_PENTAX_TAG_UNKNOWN_05, "Unknown5", N_("Unknown 5"), ""},
-	{MNOTE_PENTAX_TAG_UNKNOWN_06, "Unknown6", N_("Unknown 6"), ""},
-	{MNOTE_PENTAX_TAG_WHITE_BALANCE, "WhiteBalance", N_("White Balance"), ""},
-	{MNOTE_PENTAX_TAG_UNKNOWN_08, "Unknown8", N_("Unknown 8"), ""},
-	{MNOTE_PENTAX_TAG_UNKNOWN_09, "Unknown9", N_("Unknown 9"), ""},
-	{MNOTE_PENTAX_TAG_ZOOM, "Zoom", N_("Zoom"), ""},
-	{MNOTE_PENTAX_TAG_SHARPNESS, "Sharpness", N_("Sharpness"), ""},
-	{MNOTE_PENTAX_TAG_CONTRAST, "Contrast", N_("Contrast"), ""},
-	{MNOTE_PENTAX_TAG_SATURATION, "Saturation", N_("Saturation"), ""},
-	{MNOTE_PENTAX_TAG_UNKNOWN_14, "Unknown14", N_("Unknown 14"), ""},
-	{MNOTE_PENTAX_TAG_UNKNOWN_15, "Unknown15", N_("Unknown 15"), ""},
-	{MNOTE_PENTAX_TAG_UNKNOWN_16, "Unknown16", N_("Unknown 16"), ""},
-	{MNOTE_PENTAX_TAG_UNKNOWN_17, "Unknown17", N_("Unknown 17"), ""},
-	{MNOTE_PENTAX_TAG_UNKNOWN_18, "Unknown18", N_("Unknown 18"), ""},
-	{MNOTE_PENTAX_TAG_UNKNOWN_19, "Unknown19", N_("Unknown 19"), ""},
-	{MNOTE_PENTAX_TAG_ISO_SPEED, "ISOSpeed", N_("ISOSpeed"), ""},
-	{MNOTE_PENTAX_TAG_UNKNOWN_21, "Unknown21", N_("Unknown 21"), ""},
-	{MNOTE_PENTAX_TAG_COLOR, "Color", N_("Color"), ""},
-	{MNOTE_PENTAX_TAG_UNKNOWN_24, "Unknown24", N_("Unknown 24"), ""},
-	{MNOTE_PENTAX_TAG_UNKNOWN_25, "Unknown25", N_("Unknown 25"), ""},
-	{MNOTE_PENTAX_TAG_PRINTIM, "PrintIM", N_("PrintIM Settings"), ""},
-	{MNOTE_PENTAX_TAG_TZ_CITY, "TimeZone", N_("TimeZone"), ""},
-	{MNOTE_PENTAX_TAG_TZ_DST, "DaylightSavings", N_("DaylightSavings"), ""},
+	{MNOTE_PENTAX_TAG_MODE, "Mode", N_("Capture Mode"), NULL},
+	{MNOTE_PENTAX_TAG_QUALITY, "Quality", N_("Quality Level"), NULL},
+	{MNOTE_PENTAX_TAG_FOCUS, "Focus", N_("Focus Mode"), NULL},
+	{MNOTE_PENTAX_TAG_FLASH, "Flash", N_("Flash Mode"), NULL},
+	{MNOTE_PENTAX_TAG_UNKNOWN_05, NULL, NULL, NULL},
+	{MNOTE_PENTAX_TAG_UNKNOWN_06, NULL, NULL, NULL},
+	{MNOTE_PENTAX_TAG_WHITE_BALANCE, "WhiteBalance", N_("White Balance"), NULL},
+	{MNOTE_PENTAX_TAG_UNKNOWN_08, NULL, NULL, NULL},
+	{MNOTE_PENTAX_TAG_UNKNOWN_09, NULL, NULL, NULL},
+	{MNOTE_PENTAX_TAG_ZOOM, "Zoom", N_("Zoom"), NULL},
+	{MNOTE_PENTAX_TAG_SHARPNESS, "Sharpness", N_("Sharpness"), NULL},
+	{MNOTE_PENTAX_TAG_CONTRAST, "Contrast", N_("Contrast"), NULL},
+	{MNOTE_PENTAX_TAG_SATURATION, "Saturation", N_("Saturation"), NULL},
+	{MNOTE_PENTAX_TAG_UNKNOWN_14, NULL, NULL, NULL},
+	{MNOTE_PENTAX_TAG_UNKNOWN_15, NULL, NULL, NULL},
+	{MNOTE_PENTAX_TAG_UNKNOWN_16, NULL, NULL, NULL},
+	{MNOTE_PENTAX_TAG_UNKNOWN_17, NULL, NULL, NULL},
+	{MNOTE_PENTAX_TAG_UNKNOWN_18, NULL, NULL, NULL},
+	{MNOTE_PENTAX_TAG_UNKNOWN_19, NULL, NULL, NULL},
+	{MNOTE_PENTAX_TAG_ISO_SPEED, "ISOSpeed", N_("ISOSpeed"), NULL},
+	{MNOTE_PENTAX_TAG_UNKNOWN_21, NULL, NULL, NULL},
+	{MNOTE_PENTAX_TAG_COLOR, "Color", N_("Color"), NULL},
+	{MNOTE_PENTAX_TAG_UNKNOWN_24, NULL, NULL, NULL},
+	{MNOTE_PENTAX_TAG_UNKNOWN_25, NULL, NULL, NULL},
+	{MNOTE_PENTAX_TAG_PRINTIM, "PrintIM", N_("PrintIM Settings"), NULL},
+	{MNOTE_PENTAX_TAG_TZ_CITY, "TimeZone", N_("TimeZone"), NULL},
+	{MNOTE_PENTAX_TAG_TZ_DST, "DaylightSavings", N_("DaylightSavings"), NULL},
 	{0, NULL, NULL, NULL}
 };
 
